--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		</div>
 	</div>
 	<div class="panel">
-		<a href="pages/backpack.html"><img src="img/filler3.gif"></a>
+		<a href="pages/backpack.html"><img src="img/filler1.gif"></a>
 		<div class="text">
 			<a class="header" href="pages/backpack.html"><h3>Backpack</h3></a>			
 			<p>	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<br><br><a href="pages/backpack.html">Read More >></a></p>
@@ -23,7 +23,7 @@
 			<a class="header" href="pages/city.html"><h3>City</h3></a>			
 			<p>	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<br><br><a href="pages/city.html">Read More >></a></p>
 		</div>
-		<a href="pages/city.html"><img src="img/filler3.gif"></a>
+		<a href="pages/city.html"><img src="img/filler2.gif"></a>
 	</div>
 	<div class="panel">
 		<a href="pages/drone.html"><img src="img/filler3.gif"></a>
@@ -39,29 +39,24 @@
 		</div>
 		<div class="column" id="profiles">
 			<div class="profile">
-				<h4>Alexander Stewart <a href=""><img class="icon" src="img/icons/normal/behance.svg"></a>
-				<a href=""><img class="icon" src="img/icons/normal/twitter.svg"></a></h4>
-				<h5>aasdfadf@asdf.com</h5>
+				<h5><a href="">Alexander Stewart</a></h6>
+				<h6>aasdfadf@asdf.com</h6>
 			</div>
 			<div class="profile">
-				<h4>Alexander Peacock <a href=""><img class="icon" src="img/icons/normal/behance.svg"></a>
-				<a href=""><img class="icon" src="img/icons/normal/twitter.svg"></a></h4>
-				<h5>aasdfadf@asdf.com</h5>
-	
+				<h5><a href="">Alexander Peacock</a></h6>
+				<h6>aasdfadf@asdf.com</h6>
 			</div>
 			<div class="profile">
-				<h4>Jason Hu <a href=""><img class="icon" src="img/icons/normal/github.svg"></a>
-				<a href=""><img class="icon" src="img/icons/normal/twitter.svg"></a></h4>
-				<h5>aasdfadf@asdf.com</h5>
+				<h5><a href="">Jason Hu</a></h6>
+				<h6>aasdfadf@asdf.com</h6>
 			</div>
 			<div class="profile">
-				<h4>Ryan Mather <a href=""><img class="icon" src="img/icons/normal/behance.svg"></a>
-				<a href=""><img class="icon" src="img/icons/normal/twitter.svg"></a></h4>
-				<h5>aasdfadf@asdf.com</h5>
+				<h5><a href="">Ryan Mather</a></h6>
+				<h6>aasdfadf@asdf.com</h6>
 			</div>
 		</div>
 		<div class="column" id="contacts">
-			<h3>Keep updated!</h3>
+			<h4>Keep updated!</h4>
 			<form>
 			<input type="text" name="email" placeholder="email"><input type="submit" value="Submit">
 			</form>
