--- a/ngwFinal/index.html
+++ b/ngwFinal/index.html
@@ -4,33 +4,42 @@
 </head>
 <body>
 	<div class="toppanel">
-		<h4 class="title"><a href="index.html" id="current">proprio</a> | <a href="./pages/backpack.html">Backpack</a> | <a href="pages/cities.html">Cities</a> | <a href="pages/drone.html">Drone</a> | <a href="">References</a> | <a href="#about">About Us</a></h4>
+		<h4 class="title"><a href="index.html" id="current">proprio</a> | <a href="#backpack">Backpack</a> | <a href="#city">Cities</a> | <a href="#drone">Drone</a> | <a href="pages/references.html">References</a> | <a href="#about">About Us</a></h4>
 		<div class="videoframe">
 			<!-- width="840" height="472"  -->
 			<iframe frameborder="0" src="https://youtube.com/embed/Ip2ZGND1I9Q?autoplay=0&loop=1&controls=1&showinfo=0&autohide=1&playlist=Ip2ZGND1I9Q">
 			</iframe>
-			<p class="caption">We welcome you to explore a world of technological self-reflection. Today, we query our devices to help us work and relax, and in turn they learn our habits and tastes. As we share more of our data, devices and algorithms will grow more sophisticated and powerful, able to provide &#8220smarter&#8221 results. But how can we make technology that lets us step outside of our queries? Can we use machines to ask questions beyond lunch, schedules, and movies&#8212questions about ourselves and who we are? We created three devices to explore what these devices might look like. In the future, technologies of observation won&#39t lead to self-absorbance or violations of privacy, but provide compelling questions surrounding ourselves and our relationships. </p>
+		</div>
+			<p class="caption">We welcome you to explore a world of technological self-reflection. Today, we query our devices to help us work and relax, and in turn they learn our habits and tastes. As we share more of our data, devices and algorithms will grow more sophisticated and powerful, able to provide &#8220smarter&#8221 results. But how can we make technology that lets us step outside of our queries? Can we use machines to ask questions beyond lunch, schedules, and movies&#8212questions about ourselves and who we are? We created three devices to explore what these devices might look like. In the future, technologies of observation won&#39t lead to self-absorbance or violations of privacy, but provide compelling questions surrounding ourselves and our relationships. </p>	
+		</div>
+	<div class="panel" id="backpack">
+		<!-- <a href="pages/backpack.html"><img src="img/filler1.gif"></a> -->
+		<img src="img/filler1.gif">
+		<div class="text">
+			<h3>Backpack</h3>
+			<!-- <a class="header" href="pages/backpack.html"><h3>Backpack</h3></a>			 -->
+			<p>	The smartphones that have allowed us to take so many photos of ourselves are now able to almost as instantly record and share high quality video. However, where the still photo gives an impression of a specific time and place, the selfie video allows us to view ourselves moving and interacting. To explore this, we created a visor and wearable camera. This device pair allows the wearer to view themselves persistently in 3rd person. Their interactions and decisions are all now done within a newfound self-awareness. In this technological future, values and assertions are reframed from ourselves to our context, as we all become the visual center of our own respective universes. 
+				<!-- <br><br><a href="pages/backpack.html">Read More >></a></p> -->
 		</div>
 	</div>
-	<div class="panel">
-		<a href="pages/backpack.html"><img src="img/filler1.gif"></a>
+	<div class="panel" id="city">
 		<div class="text">
-			<a class="header" href="pages/backpack.html"><h3>Backpack</h3></a>			
-			<p>	The smartphones that have allowed us to take so many photos of ourselves are now able to almost as instantly record and share high quality video. However, where the still photo gives an impression of a specific time and place, the selfie video allows us to view ourselves moving and interacting. To explore this, we created a visor and wearable camera. This device pair allows the wearer to view themselves persistently in 3rd person. Their interactions and decisions are all now done within a newfound self-awareness. In this technological future, values and assertions are reframed from ourselves to our context, as we all become the visual center of our own respective universes. <br><br><a href="pages/backpack.html">Read More >></a></p>
+			<h3>City</h3>
+			<!-- <a class="header" href="pages/city.html"><h3>City</h3></a> -->
+			<p>	In the past two decades surveillance cameras became a common fixture in urban environments. Their ubiquity and the subsequent discussions of privacy have come into the social media age, where access to surveillance data is replacing our reluctance to be surveilled. In a near future city, our relationship to security footage will be subverted: Surveillance becoming a necessary public utility, rather than an intrusion into our privacy. We will always be in frame, and people will watch themselves traversing the urban environment entirely through the infrastructure of surveillance devices. 
+				<!-- <br><br><a href="pages/city.html">Read More >></a></p> -->
 		</div>
+		<img src="img/filler2.gif">
+		<!-- <a href="pages/city.html"><img src="img/filler2.gif"></a> -->
 	</div>
-	<div class="panel">
+	<div class="panel" id="drone">
+		<img src="img/filler3.gif">
+		<!-- <a href="pages/drone.html"><img src="img/filler3.gif"></a> -->
 		<div class="text">
-			<a class="header" href="pages/city.html"><h3>City</h3></a>
-			<p>	In the past two decades surveillance cameras became a common fixture in urban environments. Their ubiquity and the subsequent discussions of privacy have come into the social media age, where access to surveillance data is replacing our reluctance to be surveilled. In a near future city, our relationship to security footage will be subverted: Surveillance becoming a necessary public utility, rather than an intrusion into our privacy. We will always be in frame, and people will watch themselves traversing the urban environment entirely through the infrastructure of surveillance devices. <br><br><a href="pages/city.html">Read More >></a></p>
-		</div>
-		<a href="pages/city.html"><img src="img/filler2.gif"></a>
-	</div>
-	<div class="panel">
-		<a href="pages/drone.html"><img src="img/filler3.gif"></a>
-		<div class="text">
-			<a class="header" href="pages/drone.html"><h3>Drone</h3></a>
-			<p>	We speculate that at some point in the future the network of optics that watch us will be detached. Devices will fly around as autonomous robots closely resembling the drones we have today. However, rather than being an apparatus for surveillance, these will be a personalized infrastructure for reflection. A spiritual prosthesis, they’ll allow us to transcend transcend our physical bodies, rise above the cities, and fully view the world as it presently is. <br><br><a href="pages/drone.html">Read More >></a></p>
+			<h3>Drone</h3>
+			<!-- <a class="header" href="pages/drone.html"><h3>Drone</h3></a> -->
+			<p>	We speculate that at some point in the future the network of optics that watch us will be detached. Devices will fly around as autonomous robots closely resembling the drones we have today. However, rather than being an apparatus for surveillance, these will be a personalized infrastructure for reflection. A spiritual prosthesis, they&#39ll allow us to transcend transcend our physical bodies, rise above the cities, and fully view the world as it presently is. 
+				<!-- <br><br><a href="pages/drone.html">Read More >></a></p> -->
 		</div>
 	</div>
 	<div class="panel"  id="about">
@@ -40,23 +49,23 @@
 		</div>
 		<div class="column" id="profiles">
 			<div class="profile">
-				<h5><a href="">Alexander Stewart</a></h6>
-				<h6>aasdfadf@asdf.com</h6>
+				<h5><a href="https://twitter.com/wastetalent">Alexander Stewart</a></h6>
+				<h6>astewart02@risd.edu</h6>
 			</div>
 			<div class="profile">
-				<h5><a href="">Alexander Peacock</a></h6>
-				<h6>aasdfadf@asdf.com</h6>
+				<h5><a href="https://twitter.com/_peacockpeacock">Alexander Peacock</a></h6>
+				<h6>apeacock@risd.edu</h6>
 			</div>
 			<div class="profile">
-				<h5><a href="">Jason Hu</a></h6>
-				<h6>aasdfadf@asdf.com</h6>
+				<h5><a href="https://twitter.com/jason_h_hu">Jason Hu</a></h6>
+				<h6>jason_hu@brown.edu</h6>
 			</div>
 			<div class="profile">
-				<h5><a href="">Ryan Mather</a></h6>
-				<h6>aasdfadf@asdf.com</h6>
+				<h5><a href="https://twitter.com/flomerboy">Ryan Mather</a></h6>
+				<h6>rmather@risd.edu</h6>
 			</div>
 		</div>
-		<div class="column" id="contacts">
+<!-- 		<div class="column" id="contacts">
 			<h4>Keep updated!</h4>
 			<form>
 			<input type="text" name="email" placeholder="email"><input type="submit" value="Submit">
@@ -66,7 +75,7 @@
 				<li><a href=""><img class="icon" src="img/icons/normal/twitter.svg"></a></li>
 				<li><a href=""><img class="icon" src="img/icons/normal/tumblr.svg"></a></li>
 			</ul>
-		</div>
+		</div> -->
 
 	</div>
 </body>
