--- a/ngwFinal/index.html
+++ b/ngwFinal/index.html
@@ -10,7 +10,7 @@
 			<iframe frameborder="0" src="https://youtube.com/embed/Ip2ZGND1I9Q?autoplay=0&loop=1&controls=1&showinfo=0&autohide=1&playlist=Ip2ZGND1I9Q">
 			</iframe>
 		</div>
-			<p class="caption">We welcome you to explore a world of technological self-reflection. Today, we query our devices to help us work and relax, and in turn they learn our habits and tastes. As we share more of our data, devices and algorithms will grow more sophisticated and powerful, able to provide &#8220smarter&#8221 results. But how can we make technology that lets us step outside of our queries? Can we use machines to ask questions beyond lunch, schedules, and movies&#8212questions about ourselves and who we are? We created three devices to explore what these devices might look like. In the future, technologies of observation won&#39t lead to self-absorbance or violations of privacy, but provide compelling questions surrounding ourselves and our relationships. </p>	
+			<p class="caption">We welcome you to explore a world of technological self-reflection. Today, we query our devices to help us work and relax, and in turn they learn our habits and tastes. As we share more of our data, devices and algorithms will grow more sophisticated and powerful, able to provide &#8220smarter&#8221 results. But how can we make technology that lets us step outside of our queries? Can we use machines to ask questions beyond lunch, schedules, and movies&#8212questions about ourselves and who we are? We created three devices to explore what this technology might look like. In the future, technologies of observation won&#39t lead to self-absorbance or violations of privacy, but provide compelling reflections surrounding ourselves and our relationships. </p>	
 		</div>
 	<div class="panel" id="backpack">
 		<!-- <a href="pages/backpack.html"><img src="img/filler1.gif"></a> -->
@@ -18,7 +18,7 @@
 		<div class="text">
 			<h3>Backpack</h3>
 			<!-- <a class="header" href="pages/backpack.html"><h3>Backpack</h3></a>			 -->
-			<p>	The smartphones that have allowed us to take so many photos of ourselves are now able to almost as instantly record and share high quality video. However, where the still photo gives an impression of a specific time and place, the selfie video allows us to view ourselves moving and interacting. To explore this, we created a visor and wearable camera. This device pair allows the wearer to view themselves persistently in 3rd person. Their interactions and decisions are all now done within a newfound self-awareness. In this technological future, values and assertions are reframed from ourselves to our context, as we all become the visual center of our own respective universes. 
+			<p>	The smartphones that have allowed us to take so many photos of ourselves are now able to almost as instantly record and share high quality video. However, where the still photo gives an impression of a specific time and place, the selfie video allows us to view ourselves moving and interacting. To explore this, we created a visor and wearable camera. This device pair allows the wearer to view themselves persistently in 3rd person. Their interactions and decisions are all now done within a newfound self-awareness. In this technological future, values and assertions are reframed from ourselves to our context, as we all become a component of our visual universe. 
 				<!-- <br><br><a href="pages/backpack.html">Read More >></a></p> -->
 		</div>
 	</div>
@@ -38,7 +38,7 @@
 		<div class="text">
 			<h3>Drone</h3>
 			<!-- <a class="header" href="pages/drone.html"><h3>Drone</h3></a> -->
-			<p>	We speculate that at some point in the future the network of optics that watch us will be detached. Devices will fly around as autonomous robots closely resembling the drones we have today. However, rather than being an apparatus for surveillance, these will be a personalized infrastructure for reflection. A spiritual prosthesis, they&#39ll allow us to transcend transcend our physical bodies, rise above the cities, and fully view the world as it presently is. 
+			<p>	We speculate that in the future the network of optics that watch us will be detached. Devices will fly around as autonomous robots, closely resembling the drones we have today. However, rather than being an apparatus for surveillance, these will be a personalized infrastructure for reflection. A spiritual prosthesis, they&#39ll allow us to transcend our physical bodies, rise above the cities, and fully view the world as it presently is. 
 				<!-- <br><br><a href="pages/drone.html">Read More >></a></p> -->
 		</div>
 	</div>
