--- a/ngwFinal/index.html
+++ b/ngwFinal/index.html
@@ -4,19 +4,35 @@
 </head>
 <body>
 	<div class="toppanel">
-		<h4 class="title"><a href="index.html" id="current">proprio</a> | <a href="#backpack">Backpack</a> | <a href="#city">Cities</a> | <a href="#drone">Drone</a> | <a href="pages/references.html">References</a> | <a href="#about">About Us</a></h4>
+		<h4 class="title"><a href="index.html" id="current">proprio</a> | <a href="#backpack">Wearable</a> | <a href="#city">Network</a> | <a href="#drone">Autonomous</a> | <a href="pages/references.html">References</a> | <a href="#about">About Us</a></h4>
+		<img style="width:90%; height:auto;" src="img/dummy.png">
 		<div class="videoframe">
+			<!-- <video width="840" height="472" controls="controls" src="img/test.MOV">			</video> -->
 			<!-- width="840" height="472"  -->
-			<iframe frameborder="0" src="https://youtube.com/embed/Ip2ZGND1I9Q?autoplay=0&loop=1&controls=1&showinfo=0&autohide=1&playlist=Ip2ZGND1I9Q">
-			</iframe>
+			<!-- <iframe frameborder="0" src="https://youtube.com/embed/Ip2ZGND1I9Q?autoplay=0&loop=1&controls=1&showinfo=0&autohide=1&playlist=Ip2ZGND1I9Q">
+			</iframe> -->
+
+			<!-- <object classid='clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B'
+				codebase='http://www.apple.com/qtactivex/qtplugin.cab'>
+				<param name='src' value="img/final.MOV">
+				<param name='autoplay' value="false">
+				<param name='controller' value="true">
+				<param name='loop' value="false">
+
+				<embed src="img/final.MOV" width="900" height="600"
+				scale="tofit" autoplay="false"
+				controller="true" loop="false" bgcolor="#000000"
+				pluginspage='http://www.apple.com/quicktime/download/'>
+				</embed>
+			</object> -->
 		</div>
 			<p class="caption">We welcome you to explore a world of technological self-reflection. Today, we query our devices to help us work and relax, and in turn they learn our habits and tastes. As we share more of our data, devices and algorithms will grow more sophisticated and powerful, able to provide &#8220smarter&#8221 results. But how can we make technology that lets us step outside of our queries? Can we use machines to ask questions beyond lunch, schedules, and movies&#8212questions about ourselves and who we are? We created three devices to explore what this technology might look like. In the future, technologies of observation won&#39t lead to self-absorbance or violations of privacy, but provide compelling reflections surrounding ourselves and our relationships. </p>	
 		</div>
 	<div class="panel" id="backpack">
 		<!-- <a href="pages/backpack.html"><img src="img/filler1.gif"></a> -->
-		<img src="img/filler1.gif">
+		<img src="img/backpack.png">
 		<div class="text">
-			<h3>Backpack</h3>
+			<h3>Wearable</h3>
 			<!-- <a class="header" href="pages/backpack.html"><h3>Backpack</h3></a>			 -->
 			<p>	The smartphones that have allowed us to take so many photos of ourselves are now able to almost as instantly record and share high quality video. However, where the still photo gives an impression of a specific time and place, the selfie video allows us to view ourselves moving and interacting. To explore this, we created a visor and wearable camera. This device pair allows the wearer to view themselves persistently in 3rd person. Their interactions and decisions are all now done within a newfound self-awareness. In this technological future, values and assertions are reframed from ourselves to our context, as we all become a component of our visual universe. 
 				<!-- <br><br><a href="pages/backpack.html">Read More >></a></p> -->
@@ -24,28 +40,28 @@
 	</div>
 	<div class="panel" id="city">
 		<div class="text">
-			<h3>City</h3>
+			<h3>Autonomous</h3>
 			<!-- <a class="header" href="pages/city.html"><h3>City</h3></a> -->
 			<p>	In the past two decades surveillance cameras became a common fixture in urban environments. Their ubiquity and the subsequent discussions of privacy have come into the social media age, where access to surveillance data is replacing our reluctance to be surveilled. In a near future city, our relationship to security footage will be subverted: Surveillance becoming a necessary public utility, rather than an intrusion into our privacy. We will always be in frame, and people will watch themselves traversing the urban environment entirely through the infrastructure of surveillance devices. 
 				<!-- <br><br><a href="pages/city.html">Read More >></a></p> -->
 		</div>
-		<img src="img/filler2.gif">
+		<img src="img/city.png">
 		<!-- <a href="pages/city.html"><img src="img/filler2.gif"></a> -->
 	</div>
 	<div class="panel" id="drone">
-		<img src="img/filler3.gif">
+		<img src="img/drone.png">
 		<!-- <a href="pages/drone.html"><img src="img/filler3.gif"></a> -->
 		<div class="text">
 			<h3>Drone</h3>
 			<!-- <a class="header" href="pages/drone.html"><h3>Drone</h3></a> -->
-			<p>	We speculate that in the future the network of optics that watch us will be detached. Devices will fly around as autonomous robots, closely resembling the drones we have today. However, rather than being an apparatus for surveillance, these will be a personalized infrastructure for reflection. A spiritual prosthesis, they&#39ll allow us to transcend our physical bodies, rise above the cities, and fully view the world as it presently is. 
+			<p>	We speculate that in the future the network of optics that watch us will be detached. Devices will fly around as autonomous robots, closely resembling the drones we have today. However, rather than being an apparatus for surveillance, these will be a personalized infrastructure for reflection. A spiritual prosthesis, they&#39ll allow us to transcend our physical bodies, rise above the Network, and fully view the world as it presently is. 
 				<!-- <br><br><a href="pages/drone.html">Read More >></a></p> -->
 		</div>
 	</div>
 	<div class="panel"  id="about">
 		<h3>About us</h3>
 		<div class="column">
-			<p>	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<p>We're a group of RISD and Brown students. Our interests are drones, STEAM, coding, and being evil.<br><br>proprio is short for proprioception, the sense of your own body in space. </p>
 		</div>
 		<div class="column" id="profiles">
 			<div class="profile">
