--- a/ngwFinal/pages/references.html
+++ b/ngwFinal/pages/references.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 	<div class="toppanel">
-		<h4 class="title"><a href="../index.html" >proprio</a> | <a href="../index.html#backpack">Backpack</a> | <a href="../index.html#city">Cities</a> | <a href="../index.html#drone">Drone</a> | <a href="pages/references.html" id="current">References</a> | <a href="../index.html#about">About Us</a></h4>
+		<h4 class="title"><a href="../index.html" >proprio</a> | <a href="../index.html#backpack">Wearable</a> | <a href="../index.html#city">Network</a> | <a href="../index.html#drone">Autonomous</a> | <a href="pages/references.html" id="current">References</a> | <a href="../index.html#about">About Us</a></h4>
 		<div class="gallery">
 			<img class="image" src="">
 			<p class="caption"></p>
