--- a/ngwFinal/index.html
+++ b/ngwFinal/index.html
@@ -40,7 +40,7 @@
 	</div>
 	<div class="panel" id="city">
 		<div class="text">
-			<h3>Autonomous</h3>
+			<h3>Network</h3>
 			<!-- <a class="header" href="pages/city.html"><h3>City</h3></a> -->
 			<p>	In the past two decades surveillance cameras became a common fixture in urban environments. Their ubiquity and the subsequent discussions of privacy have come into the social media age, where access to surveillance data is replacing our reluctance to be surveilled. In a near future city, our relationship to security footage will be subverted: Surveillance becoming a necessary public utility, rather than an intrusion into our privacy. We will always be in frame, and people will watch themselves traversing the urban environment entirely through the infrastructure of surveillance devices. 
 				<!-- <br><br><a href="pages/city.html">Read More >></a></p> -->
@@ -52,7 +52,7 @@
 		<img src="img/drone.png">
 		<!-- <a href="pages/drone.html"><img src="img/filler3.gif"></a> -->
 		<div class="text">
-			<h3>Drone</h3>
+			<h3>Autonomous</h3>
 			<!-- <a class="header" href="pages/drone.html"><h3>Drone</h3></a> -->
 			<p>	We speculate that in the future the network of optics that watch us will be detached. Devices will fly around as autonomous robots, closely resembling the drones we have today. However, rather than being an apparatus for surveillance, these will be a personalized infrastructure for reflection. A spiritual prosthesis, they&#39ll allow us to transcend our physical bodies, rise above the Network, and fully view the world as it presently is. 
 				<!-- <br><br><a href="pages/drone.html">Read More >></a></p> -->
