--- a/ngwFinal/index.html
+++ b/ngwFinal/index.html
@@ -9,8 +9,8 @@
 		<div class="videoframe">
 			<!-- <video width="840" height="472" controls="controls" src="img/test.MOV">			</video> -->
 			<!-- width="840" height="472"  -->
-			<!-- <iframe frameborder="0" src="https://youtube.com/embed/Ip2ZGND1I9Q?autoplay=0&loop=1&controls=1&showinfo=0&autohide=1&playlist=Ip2ZGND1I9Q">
-			</iframe> -->
+			<iframe frameborder="0" src="https://youtube.com/embed/Ip2ZGND1I9Q?autoplay=0&loop=1&controls=1&showinfo=0&autohide=1&playlist=Ip2ZGND1I9Q">
+			</iframe>
 
 			<!-- <object classid='clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B'
 				codebase='http://www.apple.com/qtactivex/qtplugin.cab'>
