--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <head>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 </head>
 <body>
-	<h1>Wheeeee git is the worst</h1>
+	<h3>Doodle Jump?</h3>
+	<svg></svg>
+	<script type="text/javascript"></script>
 </body>
