--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <head>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 </head>
 <body>
 	<h3>Doodle Jump?</h3>
 	<svg></svg>
-	<script type="text/javascript"></script>
+	<script type="text/javascript">
+		alert("HI")
+	</script>
 </body>
