--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 </head>
 <body>
 	<h3>Doodle Jump?</h3>
-	<svg></svg>
+	<svg style="width: 100%; height 100px; background: #111;"></svg>
 	<script type="text/javascript">
-		alert("HI")
+		// alert("HI")
 	</script>
 </body>
