--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 	<h3>Doodle Jump?</h3>
-	<svg style="width: 100%; height 300px; background: #ccdd11;"></svg>
+	<svg style="width: 100%; height 300px; background: #dddd11;"></svg>
 	<script type="text/javascript">
 		// alert("HI")
 	</script>
