--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
 </head>
 <body>
 	<h3>Doodle Jump?</h3>
-	<svg style="width: 100%; height 300px; background: #dddddd;"></svg>
+	<div style="width: 100%; height 300px;"></div>
 	<script type="text/javascript">
-		// alert("HI")
+		$(document).ready(function(){
+			var hue = 0;
+			while (true){
+				$("div").css("background", hue);
+				hue ++;
+			}
+		})
 	</script>
 </body>
