--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 	<h3>Doodle Jump?</h3>
 	<div style="width: 100%; height 300px;"></div>
 	<script type="text/javascript">
+		alert("ready")
 		$(document).ready(function(){
+			alert("really ready")
 			var hue = 0;
 			setInterval(function(){
 				$("div").css("background", hue);
