--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <head>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 </head>
 <body>
 	<h3>Doodle Jump?</h3>
 	<div style="width: 100%; height 300px;"></div>
 	<script type="text/javascript">
-		alert("ready")
-		$(document).ready(function(){
-			alert("really ready")
-			var hue = 0;
-			setInterval(function(){
-				$("div").css("background", hue);
-				hue ++;
-			}, 1000);
-		})
+		// alert("ready")
+		// $(document).ready(function(){
+		// 	alert("really ready")
+		// 	var hue = 0;
+		// 	setInterval(function(){
+		// 		$("div").css("background", hue);
+		// 		hue ++;
+		// 	}, 1000);
+		// })
 	</script>
 </body>
