--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="css/blog.css">
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+	<script src="script/index.js"></script>
 </head>
 
 <body>
@@ -24,13 +25,13 @@
 			</ul>
 		</div>
 		<div class="myGallery">
-			<img src="img/stock/wedding.jpg">
+			<img class="main" src="img/stock/wedding.jpg">
 		</div>
 		<div class="navigator">
+<!-- 			<a href="error.html"><div class="navigatorButton"></div></a>
 			<a href="error.html"><div class="navigatorButton"></div></a>
 			<a href="error.html"><div class="navigatorButton"></div></a>
-			<a href="error.html"><div class="navigatorButton"></div></a>
-			<a href="error.html"><div class="navigatorButton"></div></a>
+			<a href="error.html"><div class="navigatorButton"></div></a> -->
 		</div>
 	</div>
 	
