--- a/about.html
+++ b/about.html
@@ -8,9 +8,7 @@
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 </head>
-
 <body>
-
 	<div class="header">
 		<div class="myNavbar container-fluid">
 			<a href="/">
@@ -26,7 +24,7 @@
 	
 	<div class="body container-fluid">
 		<div class="profile container-fluid">
-			<h1>Here at Blackstone, we think that the best cocktails have yet to be invented. </h1>
+			<h1>Blackstone Cocktails started with the idea that </h1>
 			<p>This should probably describe our value proposition, in some way. Young, hip, cool. #lifestylebrand. </p>
 		</div>
 		<div id="background"class="section container-fluid"> 
