--- a/error.html
+++ b/error.html
@@ -12,9 +12,9 @@
 				<img src="img/logos/logo_final_background.svg">
 			</a>	
 			<ul>
-				<a href="error.html"><li>PRODUCTS</li></a>
-				<a href="error.html"><li>ABOUT US</li></a>
-				<a href="error.html"><li>EVENTS</li></a>
+				<a href="products.html"><li>PRODUCTS</li></a>
+				<a href="about.html"><li>ABOUT US</li></a>
+				<a href="events.html"><li>EVENTS</li></a>
 			</ul>
 		</div>
 		<div class="splashMessage container-fluid">
