--- a/about.html
+++ b/about.html
@@ -24,8 +24,8 @@
 	
 	<div class="body container-fluid">
 		<div class="profile container-fluid">
-			<h1>Blackstone Cocktails started with the idea that </h1>
-			<p>This should probably describe our value proposition, in some way. Young, hip, cool. #lifestylebrand. </p>
+			<h1>Blackstone Cocktails started with the idea that today's cocktails were just the beginning. </h1>
+			<p>We saw today's explosion of flavors, ingredients, cultures, and preparations as the raw material for new types of alcohol. New spirits like sake, ourzo, and mate became staples of the American bar, and a renaissance in craft liquors and brews unfolded. From molecular gastronomy to old-school mixology, it's a whole new horizon to reinvent the cocktail.</p>
 		</div>
 		<div id="background"class="section container-fluid"> 
 			<a href="error.html">
