--- a/products.html
+++ b/products.html
@@ -26,8 +26,9 @@
 	
 	<div class="body container-fluid">
 		<div class="profile container-fluid">
-			<h1>Here at Blackstone, we think that the best cocktails have yet to be invented. </h1>
-			<p>This should probably describe our value proposition, in some way. Young, hip, cool. #lifestylebrand. </p>
+			<h1>Old favorites. New forms.</h1>
+			<p>We look for inspiration everywhere, from old-school mixology to cutting edge molecular gastronomy. After months of taste testing, we're proud to present our lineup of jellied cocktails.</p>
+			<p>Have somethign else in mind? Let us know. Our bartenders are always looking for a new challenge, and we'd love to debut it at your party.</p>
 		</div>
 		<div class="catalog container-fluid">
 			<div class="product">	
