--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
 					<img src="http://register.tomorrowland.com/images/bg.jpg">
 				</div>
 				<h1>the Blackstone Life</h1>
-				<p>First we find a great bartender. They're usually doing really innovative work in some podunk area of the country. Then we trick them into delivering some beautiful piece of craftsmanship. Then we steal all their work, claim it for our own, desecrate all the care with blatant commercialization, and then package it to sell to you direct. Voila. Small-batch, hand-crafted exploitation.</p>
+				<p>Do you ever look at your closet and realize that buying that extra Ed Hardy shirt isn't worth it, or that pounding shots of Patron at the bar isn't fun anymore? Than we have the brand for you! Blackstone: Where you can look like a stunted man-child and pound "fancy" jello-shots like a dude-bro whose golden years were in high school.</p>
 			</a>
 		</div>
 		<div id="team" class="section  container-fluid">
