--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <head>
-	<title>Blackstone Co.</title>
+	<title>Black Diamond Co.</title>
 	<link rel="icon" type="image/png" href="img/favicon.png">
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
@@ -24,7 +24,7 @@
 	
 	<div class="body container-fluid">
 		<div class="profile container-fluid">
-			<h1>Blackstone Cocktails started with the idea that today's cocktails were just the beginning. </h1>
+			<h1>Black Diamond Cocktails started with the idea that today's cocktails were just the beginning. </h1>
 			<p>We saw today's explosion of flavors, ingredients, cultures, and preparations as the raw material for new types of alcohol. New spirits like sake, ourzo, and mate became staples of the American bar, and a renaissance in craft liquors and brews unfolded. From molecular gastronomy to old-school mixology, it's a whole new horizon to reinvent the cocktail.</p>
 		</div>
 		<div id="background"class="section container-fluid"> 
@@ -50,8 +50,8 @@
 				<div class="postImageFrame">
 					<img src="http://register.tomorrowland.com/images/bg.jpg">
 				</div>
-				<h1>the Blackstone Life</h1>
-				<p>Do you ever look at your closet and realize that buying that extra Ed Hardy shirt isn't worth it, or that pounding shots of Patron at the bar isn't fun anymore? Than we have the brand for you! Blackstone: Where you can look like a stunted man-child and pound "fancy" jello-shots like a dude-bro whose golden years were in high school.</p>
+				<h1>the Black Diamond Life</h1>
+				<p>Do you ever look at your closet and realize that buying that extra Ed Hardy shirt isn't worth it, or that pounding shots of Patron at the bar isn't fun anymore? Than we have the brand for you! Black Diamond: Where you can look like a stunted man-child and pound "fancy" jello-shots like a dude-bro whose golden years were in high school.</p>
 			</a>
 		</div>
 		<div id="team" class="section  container-fluid">
