--- a/error.html
+++ b/error.html
@@ -24,7 +24,7 @@
 			<br>
 			<br>
 			<div class="input-group">
-				<input type="text" class="form-control" value="jerry_thomas@blackstone.com">
+				<input type="text" class="form-control" value="jerry_thomas@Black Diamond.com">
 				<div class="input-group-btn">
 					<button type="button" class="btn btn-default ">Submit</button>
 				</div>
