--- a/products.html
+++ b/products.html
@@ -1,5 +1,5 @@
 <head>
-	<title>Blackstone Co.</title>
+	<title>Black Diamond Co.</title>
 	<link rel="icon" type="image/png" href="img/favicon.png">
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
