--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ fjs.parentNode.insertBefore(js, fjs);
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="">dataArbitrage</a>
+				<a class="navbar-brand" href="index.html"><img src="img/icons/snake.svg"></a>
 			</div>
 
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -37,7 +37,6 @@ fjs.parentNode.insertBefore(js, fjs);
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="#aboutUs">About Us</a></li>
 					<li><a href="#howItWorks">How it Works</a></li>
-					<li><a href="#FAQs">FAQs</a></li>
 					<li><a href="#contactUs">Contact Us</a></li>
 					<li><a href="/legal.html">Legal</a></li>
 				</ul>
@@ -107,6 +106,8 @@ fjs.parentNode.insertBefore(js, fjs);
 				<h3>Breaking the Economics of Data</h3>
 				<p>Through DataArbitrage, we can undermine the value of data, until it becomes to uncertain and to costly for companies to collect and understand. When the cost to collect a terabyte of data surpasses its value, then the data economy will stop running.</p>
 				<p>Our analysts have project 2064 as the year we can break the data economy.</p>
+				<br>
+				<h4>Figure 1. Projected <span id="price">Value</span> and <span id="cogs">Cost</span> of one Terabyte of Data</h4>
 				<div class="imageFrame">
 					<svg></svg>
 				</div>
@@ -116,13 +117,6 @@ fjs.parentNode.insertBefore(js, fjs);
 					<h3>NUMBER OF ARBITRAGEURS: <span id="arbitrageurs">1000</span></h3>
 					<p>We have managed to recruit a small cohort of accounts to participate in DataArbitrage. Are some of them fake? Probably.</p>
 				</div>
-			</div>
-		</div>
-	</div>
-	<div class="container-fluid myContainer" id="FAQs">
-		<div class="container-fluid  col-md-8 col-md-offset-2">
-			<div class="container-fluid page-header">
-				<h2>FAQs</h2>
 			</div>
 		</div>
 	</div>
@@ -153,10 +147,14 @@ fjs.parentNode.insertBefore(js, fjs);
 				<div class="imageFrame">
 					<img src="img/prof3.jpg">
 				</div>
-				<h4>Name McName</h4>
+				<h4>Stu X. </h4>
 				<h5>CEO</h5>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla blandit ornare vehicula. Maecenas hendrerit bibendum mi sed accumsan. Nam vehicula arcu vel dictum bibendum. </p>
 			</div>
 		</div>	
 	</div>
+	<div class="container-fluid col-md-12 myFooter">
+	</div>
+
+
 </body>
