--- a/legal.html
+++ b/legal.html
@@ -15,16 +15,16 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="index.html">dataArbitrage</a>
+				<a class="navbar-brand" href="index.html"><img src="img/icons/logo.svg"></a>
+
 			</div>
 
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="index.html/#aboutUs">About Us</a></li>
-					<li><a href="index.html/#howItWorks">How it Works</a></li>
-					<li><a href="index.html/#FAQs">FAQs</a></li>
-					<li><a href="index.html/#contactUs">Contact Us</a></li>
+					<li><a href="/#aboutUs">About Us</a></li>
+					<li><a href="/#howItWorks">How it Works</a></li>
+					<li><a href="/#contactUs">Contact Us</a></li>
 					<li><a href="legal.html">Legal</a></li>
 				</ul>
 			</div>
